<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.slytechs.jnet</groupId>
	<artifactId>jnet-sdk-parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>jNet SDK - Parent Super POM</name>
	<description>Aggregator project for all jNet related project and modules</description>

	<properties>
		<!-- Module versions -->
		<jnetruntime.version>0.1.0-SNAPSHOT</jnetruntime.version>
		<protocol.version>0.10.0-SNAPSHOT</protocol.version>
		<jnetpcap.version>0.11.0-SNAPSHOT</jnetpcap.version>
		<jnetpcap.wrapper.version>2.3.0-SNAPSHOT</jnetpcap.wrapper.version>

		<!-- Build properties -->
		<jdk.version>22</jdk.version>
		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<java.preview></java.preview>
		<java.encoding>UTF-8</java.encoding>
		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
		<groups>user-permission</groups>
		<excludeGroups>windows-api|unix-api|linux-api</excludeGroups>

		<!-- GPG signature key -->
		<gpg.keyname>0xD6D487A5</gpg.keyname>
	</properties>

	<profiles>
		<profile>
			<id>runtime</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			
			<modules>
				<module>../jnetruntime-sdk</module>
			</modules>
		</profile>

		<profile>
			<id>protocol</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<modules>
				<module>../protocol-pack-sdk</module>
			</modules>
		</profile>

		<profile>
			<id>wrapper</id>
			<modules>
				<module>../jnetpcap-sdk/jnetpcap-wrapper</module>
			</modules>
		</profile>

		<profile>
			<id>pcap</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>

			<modules>
				<module>../jnetpcap-sdk</module>
			</modules>
		</profile>

		<profile>
			<id>works</id>
			<modules>
				<module>../jnetworks-sdk</module>
				<module>../jnetntapi-sdk</module>
				<module>../jnetdpdkapi-sdk</module>
			</modules>
		</profile>

	</profiles>

	<dependencies>
		<!--
		https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.10.3</version>
			<scope>test</scope>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>

		<extensions>
			<!-- OS Maven Plugin for OS-specific properties -->
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>1.7.0</version>
			</extension>
		</extensions>

		<plugins>
			<!-- Maven Compiler Plugin for compiling Java source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<release>${jdk.version}</release>
				</configuration>
			</plugin>

			<!-- Maven Site Plugin for generating project websites -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.12.1</version>
			</plugin>

			<!-- Maven Surefire Plugin for running unit tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>

			<!-- Maven Javadoc Plugin for generating Javadocs -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<sourcepath>${basedir}/src/main/java</sourcepath>
					<show>public</show>
					<additionalOptions>${java.preview}</additionalOptions>
					<additionalOptions>-quiet</additionalOptions>
					<excludePackageNames>*.internal:*.internal.*</excludePackageNames>
				</configuration>
			</plugin>

			<!-- Maven SCM Publish Plugin for publishing to SCM -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-publish-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<scmBranch>gh-pages</scmBranch>
				</configuration>
			</plugin>

			<!-- Maven Source Plugin for attaching source jars -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Nexus Staging Maven Plugin for deploying to OSSRH -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<!-- Maven GPG Plugin for signing artifacts -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<keyname>${gpg.keyname}</keyname>
							<passphraseServerId>${gpg.keyname}</passphraseServerId>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>

					</execution>
				</executions>
			</plugin>

			<!-- Versions Maven Plugin for managing versions of artifacts -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.15.0</version>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>
				https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<site>
			<id>github</id>
			<url>scm:git:git@github.com:slytechs-repos/${parent.project}.git</url>
		</site>
	</distributionManagement>

	<licenses>
		<license>
			<name>Sly Technology's Free License</name>
			<url>http://www.slytechs.com/free-license-text</url>
		</license>
	</licenses>

	<organization>
		<name>Sly Technologies Inc</name>
		<url>http://slytechs.com</url>
	</organization>

	<developers>
		<developer>
			<id>markb</id>
			<name>Mark Bednarczyk</name>
			<email>mark@slytechs.com</email>
			<organization>Sly Technlogies</organization>
			<organizationUrl>http://slytechs.com</organizationUrl>
		</developer>
	</developers>

</project>
